<package>
  <name>singlecamera_orbslam2</name>
  <version>1.0.0</version>
  <description>
    ORB_SLAM2 for a single camera
  </description>
  <author>Raul Mur-Artal</author>
  <license>GPLv3</license>
  <maintainer email="raulmur@unizar.es">Raul Mur-Artal</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>python-mock</test_depend>
</package>